--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -116,10 +116,10 @@ time-format = %H:%M
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 label-charging = CHG %percentage%%
-label-discharging = %percentage%%
+label-discharging = Discharging %percentage%%
 label-full = Fully charged
 
-label-low = BATTERY LOW
+label-low = <animation-low> BATTERY LOW
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 = 
