--- a/i3/config
+++ b/i3/config
@@ -48,6 +48,9 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
+# Screenshot using ScrCpr
+bindsym Print exec ~/dev/python/ScrCpr/venv/bin/python ~/dev/python/ScrCpr/main.py
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -59,7 +62,7 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec alacritty
 
 # start rofi drun
-bindsym $mod+o exec rofi -show drun
+bindsym $mod+o exec rofi -show-icons -show drun
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -195,5 +198,5 @@ bindsym $mod+r mode "resize"
 
 gaps inner 10
 gaps outer 1
-smart_gaps on
+# smart_gaps on
 default_border none
