--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -9,23 +9,24 @@ style = "Block"
 size = 12.0
 
 [font.bold]
-family = "JetBrains Mono Nerd Font"
+family = "Comic Shanns Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "JetBrains Mono Nerd Font"
+family = "Comic Shanns Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "JetBrains Mono Nerd Font"
+family = "Comic Shanns Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "JetBrains Mono Nerd Font"
+family = "Comic Shanns Nerd Font"
 style = "Regular"
 
 [window]
 decorations = "full"
+opacity = 1.0
 
 [window.padding]
 x = 10
