--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,5 +1,5 @@
 import = [
-    "~/.config/alacritty/themes/themes/alabaster_dark.toml"
+    "~/.config/alacritty/themes/themes/github_light_default.toml"
 ]
 
 [cursor]
@@ -9,19 +9,19 @@ style = "Block"
 size = 12.0
 
 [font.bold]
-family = "Comic Shanns Nerd Font"
+family = "JetBrainsMonoNerdFont"
 style = "Bold"
 
 [font.bold_italic]
-family = "Comic Shanns Nerd Font"
+family = "JetBrainsMonoNerdFont"
 style = "Bold Italic"
 
 [font.italic]
-family = "Comic Shanns Nerd Font"
+family = "JetBrainsMonoNerdFont"
 style = "Italic"
 
 [font.normal]
-family = "Comic Shanns Nerd Font"
+family = "JetBrainsMonoNerdFont"
 style = "Regular"
 
 [window]
